# pls.give

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  sample.env
src/: main.rs
src/commands/: admin.rs  dyte.rs  help.rs  link.rs  misc.rs  mod.rs  owner.rs  pastebin.rs  ping.rs  quote.rs  witeboard.rs
