[package]
name = "pls-give"
version = "0.1.0"
authors = ["theProgrammerDavid <davidvelho2awesome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = { default-features = false, features = ["cache","client", "gateway", "model", "rustls_backend"], version = "0.9.1"}
dotenv_codegen = "0.15.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.9"