[package]
name = "pls-give"
version = "0.1.0"
authors = ["thebongy <rishit.bansal0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
